--- a/src/components/SquareRadioButtons.module.css
+++ b/src/components/SquareRadioButtons.module.css
@@ -1,7 +1,7 @@
 /*  Til SquareRadioButton.module.css  */
 .label {
   display: block;
-  padding: 62px;
+
   position: relative;
   /* padding-left: 20px; */
 }
@@ -10,17 +10,18 @@
 }
 .label .span {
   border: 1px solid #ccc;
-  width: 120px;
-  height: 40px;
+  /* width: 115px;
+  height: 45px; */
   /* padding: 25% 60% 25% 60%; */
-  position: absolute;
+  /* position: absolute; */
   overflow: hidden;
   text-align: center;
-  line-height: 2.4;
+  line-height: 2.9;
   border-radius: 8px;
+  padding: 15px 50px 15px 50px;
   left: 0;
   top: 50%;
-  margin-top: -7.5px;
+  /* margin-top: -7.5px; */
 }
 .input:checked + .span {
   background: #cbdad6;
