--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   & h3 {
     font-family: "DM Serif Text", serif;
     font-weight: 600;
@@ -16,4 +16,11 @@
     font-family: "DM Serif Text", serif;
     font-weight: 600;
   }
+} */
+
+h3 {
+  font-family: "DM Serif Text", serif;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1;
 }
