--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,9 +18,21 @@
   }
 } */
 
+h2 {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1;
+}
+
 h3 {
   font-family: "DM Serif Text", serif;
   font-weight: 600;
   font-size: 20px;
+  line-height: 1;
+}
+
+p {
+  font-weight: 400;
+  font-size: 14px;
   line-height: 1;
 }
