--- a/src/components/QuizLayout.module.css
+++ b/src/components/QuizLayout.module.css
@@ -4,3 +4,12 @@
   height: 30px;
   background: repeating-linear-gradient(135deg, #004634, #004634 8px, transparent 8px, transparent 16px);
 }
+
+.container {
+  position: relative;
+}
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
