--- a/src/components/QuizLayout.module.css
+++ b/src/components/QuizLayout.module.css
@@ -6,10 +6,27 @@
 }
 
 .container {
-  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  width: 100%;
+  border-radius: 0.25rem 0.25rem 0 0;
 }
 .close {
-  position: absolute;
+  position: relative;
+  z-index: 2;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  justify-self: end;
   top: 10px;
   right: 10px;
+}
+.image {
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  height: 100%;
+  border-radius: 0.25rem 0.25rem 0 0;
 }
